# tod

./: .commitlint.config.mjs  .gitignore  .gitleaksignore  .rusty-hook.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  codecov.yml  rust-toolchain.toml
.config/: nextest.toml
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: _reusable-lint.yml  _reusable-test.yml  cargo-publish.yml  ci-pr.yml  ci-push.yml  ci-release.yml  ci-secure.yml  ci.yml  ci_codecov.yml  ci_dependabot.yml  ci_pr.yml  ci_push.yml  codeql.yml  commitlint.yml  dependabot_auto_merge.yml  dependabot_review_assignment.yml  e2e_todoist.yml  e2e_todoist_full.yml  gitleaks  gitleaks.yml  release_cargo.yml  release_check.yml  release_homebrew.yaml  release_linux.yml  release_macos.yml  release_please.yml  release_windows.yml  rust-clippy.yml
.github/workflows/codeql/: codeql.yml
.github/workflows/gitleaks/: gitleaks.toml
bucket/: tod.json
crates/tod-e2e/: Cargo.toml
crates/tod-e2e/src/: lib.rs
crates/tod-e2e/tests/: e2e_todoist.rs
crates/tod-e2e/tests/e2e_todoist_fixtures/: TOD_DEV_CI_DYNAMIC.csv  TOD_DEV_CI_STATIC_READ.csv
docs/: configuration.md  development.md  installation.md  usage.md
docs/dev_docs/: ci_end2end.md  ci_testing.md
scripts/: E2E_test.sh  dev_E2E_Setup.sh  release.sh  test.sh  update_formula.rb
src/: cargo.rs  color.rs  comments.rs  config.rs  debug.rs  errors.rs  filters.rs  format.rs  id.rs  input.rs  labels.rs  legacy.rs  lists.rs  main.rs  oauth.rs  projects.rs  regexes.rs  reminders.rs  sections.rs  shell.rs  tasks.rs  test.rs  test_time.rs  time.rs  todoist.rs  update.rs  users.rs
src/commands/: auth_commands.rs  config_commands.rs  list_commands.rs  mod.rs  project_commands.rs  reminder_commands.rs  section_commands.rs  shell_commands.rs  task_commands.rs  test_commands.rs
src/config/: file.rs  mod.rs  projects.rs  timezone.rs
src/tasks/: format.rs  mod.rs  priority.rs
src/test/: fixtures.rs  responses.rs
src/todoist/: mod.rs  request.rs
tests/: cli.rs  config_create.rs  config_open.rs  e2e_todoist.rs  project_test_config
tests/responses/: Reminder.json  Reminders.json
