[package]
name = "tod"
version = "0.11.2"
authors = ["Alan Vardy <alan@vardy.cc>"]
edition = "2024"
license = "MIT"
description = "An unofficial Todoist command-line client"
readme = "README.md"
homepage = "https://github.com/tod-org/tod"
repository = "https://github.com/tod-org/tod"
keywords = ["cli", "todoist", "client", "tasks", "todo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
dirs = "6.0.0"
matches = "0.1.10"
regex = "1.12.3"
chrono = "0.4.44"
chrono-tz = "0.10.4"
colored = "3.1.1"
clap = { version = "4.5.60", features = ["derive"] }
spinners = "4.1.1"
inquire = { version = "0.9.4", features = ["date"] }
serde_repr = "0.1.20"
rand = "0.10.0"
rayon = "1.11.0"
pad = "0.1.6"
urlencoding = "2.1.3"
homedir = "0.3.6"
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3.32"
supports-hyperlinks = "3.2.0"
terminal_size = "0.4.3"
clap_complete = "4.5.66"
walkdir = "2.5.0"
once_cell = "1.21.3"
strum = { version = "0.28.0", features = ["strum_macros"] }
strum_macros = "0.28.0"
axum = "0.8.8"
serde_regex = "1.1.0"
open = "5.3.3"


[dev-dependencies]
assert_cmd = "2.1.2"
mockito = "1.7.2"
predicates = "3.1.4"
pretty_assertions = "1.4.1"

[build-dependencies]
chrono = "0.4.44"
